force-app/main/default/objects/Account/fields/Account_Category__c.field-meta.xml
<CustomField>
    <fullName>Account_Category__c</fullName>
    <defaultValue>&quot;Regional Enterprise&quot;</defaultValue>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regional Enterprise</fullName>
            </value>
            <value>
                <fullName>Select Win Account</fullName>
            </value>
            <value>
                <fullName>Select Grow Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>