force-app/main/default/objects/Account/fields/Account_Name_Stripped__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Stripped__c</fullName>
    <formula>SUBSTITUTE(Name, &quot;&amp;&quot;, &quot;and&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name Stripped</label>
    <type>Text</type>
</CustomField>