force-app/main/default/objects/Account/fields/Account_Profile__c.field-meta.xml
<CustomField>
    <fullName>Account_Profile__c</fullName>
    <label>Account Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unclassified</fullName>
                <default>true</default>
                <label>Unclassified</label>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Global 2000</fullName>
            </value>
            <value>
                <fullName>Large Enterprise</fullName>
            </value>
            <value>
                <fullName>Medium Enterprise</fullName>
            </value>
            <value>
                <fullName>Strategic</fullName>
            </value>
            <value>
                <fullName>Public Sector</fullName>
            </value>
            <value>
                <fullName>Relus not specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>