force-app/main/default/objects/Account/fields/Account_record_type_for_matching__c.field-meta.xml
<CustomField>
    <fullName>Account_record_type_for_matching__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Account record type for matching</label>
    <length>50</length>
    <type>Text</type>
</CustomField>