force-app/main/default/objects/Account/fields/Account_Size__c.field-meta.xml
<CustomField>
    <fullName>Account_Size__c</fullName>
    <description>Provide the approximate size of the account</description>
    <inlineHelpText>Please chose the correct option depending on account size (approximately). WH Smith for example have 2,000 knowledge workers but 16,000 employees in total. They are thus a large account.</inlineHelpText>
    <label>Account Size</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Small (10 - 250)</fullName>
            </value>
            <value>
                <fullName>Medium (250 - 5000)</fullName>
            </value>
            <value>
                <fullName>Large (5000 -)</fullName>
            </value>
            <value>
                <fullName>Not specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>