force-app/main/default/objects/Account/fields/Account_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Account_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>