force-app/main/default/objects/Account/fields/Account_US_Building_NB__c.field-meta.xml
<CustomField>
    <fullName>Account_US_Building_NB__c</fullName>
    <label>Account US Building NB</label>
    <length>10</length>
    <type>Text</type>
</CustomField>