force-app/main/default/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Active customers are any who have been billed within the last 15 months and should be made inactive automatically thereafter.</description>
    <formula>((YEAR(TODAY()) - YEAR( Latest_invoice_date__c  ) - 1 ) * 12 ) + 
(12 - MONTH( Latest_invoice_date__c  ) + 1 ) + MONTH(TODAY()) &lt;= 15</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Invoicing?</label>
    <type>Checkbox</type>
</CustomField>