force-app/main/default/objects/Account/fields/Additional_Background_Check_or_NDA__c.field-meta.xml
<CustomField>
    <fullName>Additional_Background_Check_or_NDA__c</fullName>
    <inlineHelpText>Are Additional Background Checks or NDA Required</inlineHelpText>
    <label>Is a further background check/NDA req’d?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>