force-app/main/default/objects/Account/fields/Additional_Invoice_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Invoice_Emails__c</fullName>
    <description>Enter additional emails separated by commas</description>
    <label>Additional Invoice Emails</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>