force-app/main/default/objects/Account/fields/Additional_Statement_Emails__c.field-meta.xml
<CustomField>
    <fullName>Additional_Statement_Emails__c</fullName>
    <inlineHelpText>Must be separated with commas. No space is required after the comma.</inlineHelpText>
    <label>Additional Statement Emails</label>
    <type>TextArea</type>
</CustomField>