force-app/main/default/objects/Account/fields/Affiliate_Account__c.field-meta.xml
<CustomField>
    <fullName>Affiliate_Account__c</fullName>
    <label>Affiliate Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>T-Systems</fullName>
            </value>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>A Cloud Guru</fullName>
            </value>
            <value>
                <fullName>Blackstone</fullName>
            </value>
            <value>
                <fullName>Atos Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>