force-app/main/default/objects/Account/fields/Agreement_EchoSigned__c.field-meta.xml
<CustomField>
    <fullName>Agreement_EchoSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox will be checked when agreement has been echosigned.</description>
    <inlineHelpText>Checkbox will be checked when agreement has been echosigned.</inlineHelpText>
    <label>Agreement EchoSigned</label>
    <type>Checkbox</type>
</CustomField>