force-app/main/default/objects/Account/fields/Agreement_Terms__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Terms__c</fullName>
    <inlineHelpText>Customer PO to be used strictly one time ONLY!</inlineHelpText>
    <label>Agreement Terms</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Framework Agreement</fullName>
            </value>
            <value>
                <fullName>Customer PO</fullName>
            </value>
            <value>
                <fullName>Non-negotiated Customer terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>