force-app/main/default/objects/Account/fields/Agreement_terms_status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_terms_status__c</fullName>
    <description>What stage is the agreement at?</description>
    <inlineHelpText>What stage is the agreement at?</inlineHelpText>
    <label>Agreement terms status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for approval</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Framework Agreement Approved</fullName>
            </value>
            <value>
                <fullName>Framework Agreement Rejected</fullName>
            </value>
            <value>
                <fullName>Customer PO Terms Approved</fullName>
            </value>
            <value>
                <fullName>Customer PO Terms Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>