force-app/main/default/objects/Account/fields/Agreement_type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_type__c</fullName>
    <label>Agreement type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>NDA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>