force-app/main/default/objects/Account/fields/Approval_submission_comments__c.field-meta.xml
<CustomField>
    <fullName>Approval_submission_comments__c</fullName>
    <label>Approval submission comments</label>
    <type>TextArea</type>
</CustomField>