force-app/main/default/objects/Account/fields/Approval_type__c.field-meta.xml
<CustomField>
    <fullName>Approval_type__c</fullName>
    <label>Approval type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer PO Terms Approval</fullName>
            </value>
            <value>
                <fullName>Framework Agreement Approval</fullName>
            </value>
            <value>
                <fullName>NDA Approval</fullName>
            </value>
            <value>
                <fullName>Non-negotiated Customer terms Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>