force-app/main/default/objects/Account/fields/Are_subcontractors_permitted__c.field-meta.xml
<CustomField>
    <fullName>Are_subcontractors_permitted__c</fullName>
    <label>Are subcontractors permitted?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>