force-app/main/default/objects/Account/fields/Are_there_any_IP_red_flags__c.field-meta.xml
<CustomField>
    <fullName>Are_there_any_IP_red_flags__c</fullName>
    <label>Are there any IP red flags?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>