force-app/main/default/objects/Account/fields/Are_there_SLA_service_credits__c.field-meta.xml
<CustomField>
    <fullName>Are_there_SLA_service_credits__c</fullName>
    <label>Are there SLA service credits?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>