force-app/main/default/objects/Account/fields/Assignable_by_Cloudreach_without_consent__c.field-meta.xml
<CustomField>
    <fullName>Assignable_by_Cloudreach_without_consent__c</fullName>
    <label>Can it be assigned by CR w/o consent?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>