force-app/main/default/objects/Account/fields/Auto_renew__c.field-meta.xml
<CustomField>
    <fullName>Auto_renew__c</fullName>
    <description>Does the customer have a auto renewed contract</description>
    <inlineHelpText>Does the customer have a auto renewed contract</inlineHelpText>
    <label>Auto renew</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>