force-app/main/default/objects/Account/fields/AWS__c.field-meta.xml
<CustomField>
    <fullName>AWS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWS</label>
    <type>Checkbox</type>
</CustomField>