force-app/main/default/objects/Account/fields/AWS_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>AWS_Account_Number__c</fullName>
    <label>AWS Account Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>