force-app/main/default/objects/Account/fields/AWS_OLA_Partner__c.field-meta.xml
<CustomField>
    <fullName>AWS_OLA_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWS OLA Partner</label>
    <type>Checkbox</type>
</CustomField>