force-app/main/default/objects/Account/fields/AWS_Well_Architecture_Review__c.field-meta.xml
<CustomField>
    <fullName>AWS_Well_Architecture_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AWS Well Architecture Review</label>
    <type>Checkbox</type>
</CustomField>