force-app/main/default/objects/Account/fields/Azure__c.field-meta.xml
<CustomField>
    <fullName>Azure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Azure</label>
    <type>Checkbox</type>
</CustomField>