force-app/main/default/objects/Account/fields/Bank_Account_Building_Nb__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Building_Nb__c</fullName>
    <label>Bank Account Building Nb</label>
    <length>10</length>
    <type>Text</type>
</CustomField>