force-app/main/default/objects/Account/fields/Bank_Routing_Number_US_Only__c.field-meta.xml
<CustomField>
    <fullName>Bank_Routing_Number_US_Only__c</fullName>
    <label>Bank Routing Number US Only</label>
    <length>9</length>
    <type>Text</type>
</CustomField>