force-app/main/default/objects/Account/fields/Bulk_Email_Statement__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Email_Statement__c</fullName>
    <formula>&quot;&amp;Id=&quot; + Id +

&quot;&amp;QueryId=[CMPSTMT]a100J000006Prk9?pv0=&quot; + $User.Id + 
&quot;,[ACTSTMT]a100J000006PrkA&quot; + 
&quot;,[TOTOUTSTMT]a100J000006PrkB?pv0={QVar0}~pv1=&quot; + Id + 
&quot;,[CMPQVAR]a100J000006PrkC&quot; + 
&quot;,[ADSTMT]a100J000006PrkD?pv0=&quot; + Id + &quot;~pv1={QVar0}&quot; + 
&quot;,[JDSTMT]a100J000006PrkE?pv0=&quot; + Id + &quot;~pv1={QVar0}&quot; + 
&quot;,[StET]a100J000006PrkF&quot; + 
&quot;,[StmtCT]a100J000006PrkG&quot; + 

&quot;&amp;OFN=&quot; + Name + TEXT(TODAY()) +
&quot;&amp;DS7=12&quot; + 
&quot;&amp;EmailSubject=Cloudreach Statement - &quot; + Name + &quot; - &quot; + TEXT(DAY(TODAY()))+&quot;/&quot; +TEXT(MONTH(TODAY()))+&quot;/&quot; +TEXT(YEAR(TODAY())) +
&quot;&amp;EmailAdditionalTo=&quot; + Additional_Statement_Emails__c + 
&quot;&amp;EmailToId=&quot; + c2g__CODAFinanceContact__c +  
&quot;&amp;DefaultPDF=1&quot; + 
&quot;&amp;CurrencyCulture=&quot; + ffaci__CurrencyCulture__c + 
&quot;&amp;CongaEmailTemplateId={QVar1}&quot; + 
&quot;&amp;DV0=&quot; + ffaci__CurrencyCulture__c +
&quot;&amp;TemplateId={QVar2}&quot; + 
&quot;&amp;QVAR1Id=a100J000006PrkI&quot; + 
&quot;&amp;QVAR2Id=a100J000006PrkJ&quot; + 
&quot;&amp;QVAR0Id=a100J000006PrkH?pv0=&quot; + $User.Id +
&quot;&amp;QMODE=SendEmail&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bulk Email Statement</label>
    <type>Text</type>
</CustomField>