force-app/main/default/objects/Account/fields/BX_Referral__c.field-meta.xml
<CustomField>
    <fullName>BX_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Critical data tracking for Blackstone</description>
    <label>BX Referral</label>
    <type>Checkbox</type>
</CustomField>