force-app/main/default/objects/Account/fields/c2g__CODABankAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODABankAccountNumber__c</fullName>
    <description>The account number</description>
    <label>Bank Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>