force-app/main/default/objects/Account/fields/c2g__CODABankSWIFTNumber__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODABankSWIFTNumber__c</fullName>
    <description>The SWIFT or similar number</description>
    <label>Bank SWIFT Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>