force-app/main/default/objects/Account/fields/c2g__CODAIncomeTaxType__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAIncomeTaxType__c</fullName>
    <description>Income Tax Type</description>
    <label>Income Tax Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Rents</fullName>
            </value>
            <value>
                <fullName>2 - Royalties</fullName>
            </value>
            <value>
                <fullName>3 - Other Income</fullName>
            </value>
            <value>
                <fullName>4 - Federal Income Tax Withheld</fullName>
            </value>
            <value>
                <fullName>5 - Fishing Boat Proceeds</fullName>
            </value>
            <value>
                <fullName>6 - Medical and Healthcare Payments</fullName>
            </value>
            <value>
                <fullName>7 - Nonemployee Compensation</fullName>
            </value>
            <value>
                <fullName>8 - Substitute Payments in Lieu of Dividends or Interest</fullName>
            </value>
            <value>
                <fullName>9 - Payer Made Direct Sales of 5000 or More</fullName>
            </value>
            <value>
                <fullName>10 - Crop Insurance Proceeds</fullName>
            </value>
            <value>
                <fullName>11 - Unused 11</fullName>
            </value>
            <value>
                <fullName>12 - Unused 12</fullName>
            </value>
            <value>
                <fullName>13 - Excess Golden Parachute Payments</fullName>
            </value>
            <value>
                <fullName>14 - Gross Proceeds Paid to an Attorney</fullName>
            </value>
            <value>
                <fullName>Not Reportable</fullName>
                <default>true</default>
                <label>Not Reportable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>