force-app/main/default/objects/Account/fields/c2g__CODAPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>c2g__CODAPaymentMethod__c</fullName>
    <description>The payment method</description>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>NL SEPA (EURO)</fullName>
            </value>
            <value>
                <fullName>UK BACS</fullName>
            </value>
            <value>
                <fullName>HSBC INTL (FROM UK)</fullName>
            </value>
            <value>
                <fullName>CANADA DOMESTIC</fullName>
            </value>
            <value>
                <fullName>US DOMESTIC</fullName>
            </value>
            <value>
                <fullName>FRANCE DOMESTIC</fullName>
            </value>
            <value>
                <fullName>FRANCE INTERNATIONAL</fullName>
            </value>
            <value>
                <fullName>DIRECT DEBIT</fullName>
            </value>
            <value>
                <fullName>GERMANY DOMESTIC</fullName>
            </value>
            <value>
                <fullName>SWISS DOMESTIC</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>